# DownloadMusicProyect

./: .gitignore  DownloadMusicScript.py  GEMINI.md  README  README.md
backend/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
backend/app/: exceptions.py  main.py
backend/app/routes/: download.py
backend/app/schema/: download_schema.py
backend/app/services/: __init__.py  download_services.py
backend/app/utils/: logger_utils.py
backend/routes/: download.py
backend/schema/: download_schema.py
backend/services/: download_services.py
backend/utils/: logger_utils.py
frontend/: .prettierrc  GEMINI.md  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  Globals.css  index.css
frontend/src/components/: CustomsToast.jsx  Footer.jsx  Hero.jsx  Navbar.jsx  SpinnerLoader.jsx  ThemeToggle.jsx
frontend/src/components/common/: SectionSeparator.jsx
frontend/src/components/toast/: Toast.jsx  toastConfig.jsx
frontend/src/data/: customers.json
frontend/src/hooks/: useDownloader.js  useRating.js  useTheme.js
frontend/src/pages/: About.jsx  Contact.jsx  Download.jsx  Home.jsx  WhyUs.jsx
frontend/src/routes/: AppRoutesPaths.jsx
frontend/src/sections/: Footer.jsx  Hero.jsx  Navbar.jsx
frontend/src/services/: DownloadServicesApi.js  Starts.js  ratingService.js
frontend/src/styles/: index.css
frontend/src/utils/: ratingUtils.js
