[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama==0.4.6",
    "colorlog>=6.9.0",
    "fastapi[standard]>=0.115.12",
    "iniconfig==2.0.0",
    "packaging==24.2",
    "pluggy==1.5.0",
    "pytest==8.3.3",
    "yt-dlp==2024.11.18",
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]
